--- a/views/meetings.html
+++ b/views/meetings.html
@@ -53,8 +53,8 @@
                                             <th style="width: 150px;">Hora</th>
                                             <th style="" data-sort-ignore="true" data-hide="phone,tablet">Contacto</th>
                                             <th style="" data-sort-ignore="true" data-hide="phone,tablet"></th>
-                                            <th data-sort-ignore="true" data-hide="phone,tablet">Asignar</th>
-                                            <th data-sort-ignore="true" data-hide="phone,tablet">Chat</th>
+                                            <th data-sort-ignore="true" >Asignar</th>
+                                            <th data-sort-ignore="true" >Chat</th>
                                         </tr>
                                     </thead>
 
